--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -15,7 +15,10 @@ jobs:
           go-version: '1.21'
 
       - name: Build
-        run: go build -v ./...
+        run: |
+          go build -v ./...
+          GOOS=darwin GOARCH=arm64 go build -v ./...
+          GOOS=windows GOARCH=amd64 go build -v ./...
 
       - name: Test
         run: go test -v ./...
